# nccu_course_result_db_converter

./: .gitignore  README.md  main.py  official.py  pyproject.toml  requirements.txt
