[tool.poetry]
name = "dcard-nccu-course-db-converter"
version = "0.1.0"
description = ""
authors = ["dong <93483694+dongdong867@users.noreply.github.com>"]
license = "apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
